1. Improved UI. 2. Added favicon. 3. Added max table size of 100 * 70 (height * width). 4. Fixed the conversion of table to image issue. (Earlier only part of table which was visible was converted to image) 5. Default table size = 10 * 10. Default color = Orange.

--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,19 @@ body {
     text-align: center;
     padding: 0;
     margin: 0;
+    font-family: 'Poiret One', cursive;
 }
 
-h1 {
-    font-family: 'Poiret One', cursive;
+header#header {
     font-size: 60px;
-    margin: 0;
+    font-weight: 700;
     padding: 10px;
-    color: black;
-    background: orange;
-    box-shadow: 0px 3px 5px 0px #00000066;
-    text-shadow: 4px 2px 3px #00000066;
+    color: orange;
+    font-family: 'VT323', monospace;
 }
 
 h2 {
     margin: 1em 0 0.25em;
-    font-family: 'Poiret One', cursive;
 }
 
 h2:first-of-type {
@@ -33,8 +30,9 @@ td {
 table {
     border-collapse: collapse;
     margin: 0 auto;
-    box-shadow: 0px 0px 10px 2px #00000066;
-    cursor: pointer;
+    box-shadow: 0px 0px 20px 2px orange;
+    cursor: url(assets/paint.png), pointer;
+    overflow-x: scroll;
 }
 
 tr {
@@ -47,7 +45,17 @@ td {
 
 input[type=number] {
     width: 6em;
-    font-family: 'Poiret One', cursive;
+    transition: box-shadow 0.5s;
+    padding: 10px;
+    width: 100px;
+    margin: 10px;
+    border-radius: 4px;
+    box-shadow: 5px 4px 10px 0px rgba(0, 0, 0, 0.3);
+}
+
+input[type=submit]:hover, input[type=reset]:hover, #btn-preview:hover, #btn-download:hover {
+    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
 }
 
 input[type=submit], input[type=reset], #btn-preview, #btn-download {
@@ -57,18 +65,29 @@ input[type=submit], input[type=reset], #btn-preview, #btn-download {
     margin: 10px;
     box-shadow: 5px 4px 10px 0px rgba(0, 0, 0, 0.3);
     transition: box-shadow 0.5s;
-    background-color: #FF9800;
+    background-color: orange;
     border: none;
     outline: none;
-    font-family: 'Poiret One', cursive;
     font-size: 16px;
     font-weight: bold;
     border-radius: 4px;
     text-decoration: none;
+    font-family: 'Poiret One', cursive;
     color: black;
 }
 
-input[type=submit]:hover, input[type=reset]:hover, #btn-preview:hover, #btn-download:hover {
+input[type=number]:hover{
     box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.3);
-    cursor: pointer;
+}
+
+footer#footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    font-size: 20px;
+    padding: 10px;
+    z-index: 1;
+    box-shadow: 0px -3px 3px 0px rgba(0, 0, 0, 0.3);
+    background: white;
 }
